@@ -470,6 +470,9 @@ version = 2.5.0a1
     # generation is done. 
     # Set the following to "software" to force software record generation:
     record_generation = hardware
+    
+    # Whether to include LOOP data in hi/low statistics.
+    loop_hilo = True
 
     # The schema to be used for the archive database. This is used only when
     # it is initialized.
